# xagentsync

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/cli/: mod.rs
src/context/: mod.rs
src/handoff/: debug.rs  deploy.rs  mod.rs  mode.rs  plan.rs
src/sync/: mod.rs
tests/: cli_tests.rs  handoff_tests.rs
