[package]
name = "xagentsync"
version = "0.1.0"
edition = "2024"
description = "LLM-to-LLM async communication middleware for non-real-time collaboration"
authors = ["phaze"]
license = "MIT"
repository = "https://github.com/Indubitable-Industries/xagentsync"
readme = "README.md"
keywords = ["llm", "ai", "agents", "handoff", "async"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Git operations
git2 = "0.19"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File system
directories = "5"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[[bin]]
name = "xas"
path = "src/main.rs"
